# electricity-prediction-ml

./: .gitignore  README.md  pyproject.toml
app/: app_streamlit.py
notebooks/: EDA.ipynb  Modeling.ipynb
src/electricity_prediction_ml/: costum_transformers.py  evaluation.py  train_model.py
